--- a/styles.css
+++ b/styles.css
@@ -92,11 +92,11 @@ h4 {
   font-size: 1.5em;
   cursor: pointer;
 }
-nav {
+#list {
   display: flex;
   justify-content: center;
 }
-nav button {
+#list th {
   cursor: pointer;
   font-size: 0.8em;
   font-family: "Ubuntu", sans-serif;
