--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,29 @@
+:root {
+  --Hufflepuff-color:rgb(172, 184, 8);
+  --Ravenclaw-color: rgb(5, 42, 252);
+  --Slytherin-color: rgb(41, 204, 0);
+  --Gryffindor-color:rgb(241, 8, 8);
+}
+
 body {
+  color: white;
   background-color: rgb(7, 5, 31);
 }
 
-.grid {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-gap: 2em;
-  margin: 20px;
-  margin-top: 10vh;
-  text-align: center;
+.Hufflepuff {
+  background-color: #978f22d0;
+}
+
+.Gryffindor {
+  background-color: rgba(139, 0, 0, 0.8);
+}
+
+.Ravenclaw {
+  background-color: rgba(0, 0, 139, 0.8);
+}
+
+.Slytherin {
+  background-color: rgba(0, 100, 0, 0.8);
 }
 
 h1 {
@@ -78,12 +93,12 @@ h4 {
   display: none;
 }
 
-#luk {
+#close {
   position: fixed;
   right: 30vw;
 }
 
-#luk button {
+#close button {
   background-color: #ff5100;
   margin-top: 20px;
   border-radius: 50%;
@@ -93,10 +108,30 @@ h4 {
   cursor: pointer;
 }
 #list {
-  display: flex;
-  justify-content: center;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-gap: 2em;
+  margin: 20px;
+  margin-top: 10vh;
+  text-align: center;
+  list-style-type: none;
 }
-#list th {
+
+.dropdown-content button {
+  float: none;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+button {
   cursor: pointer;
   font-size: 0.8em;
   font-family: "Ubuntu", sans-serif;
@@ -107,6 +142,19 @@ h4 {
   height: 70px;
   width: 110px;
 }
+
+.dropdown {
+  float: left;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
 .content img {
   border-radius: 50%;
   width: 40%;
@@ -121,4 +169,8 @@ h4 {
   margin-top: -10vh;
   margin-right: 40px;
   width: 200px;
+}
+.crest {
+  max-width: 300px;
+  margin-top: 30px;
 }
