--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,14 @@
 :root {
-  --Hufflepuff-color:rgb(172, 184, 8);
-  --Ravenclaw-color: rgb(5, 42, 252);
-  --Slytherin-color: rgb(41, 204, 0);
-  --Gryffindor-color:rgb(241, 8, 8);
+  --hufflepuff-color:rgb(172, 184, 8);
+  --ravenclaw-color: rgb(5, 42, 252);
+  --slytherin-color: rgb(41, 204, 0);
+  --gryffindor-color:rgb(241, 8, 8);
 }
 
 body {
-  color: white;
-  background-color: rgb(7, 5, 31);
+  background-color: rgb(198, 198, 201);
+  background-image: url("crest/background.jpg");
+  background-size: 100vw;
 }
 
 .Hufflepuff {
@@ -38,68 +39,151 @@ h1 {
   padding: 50px;
 }
 
-@keyframes colortitle {
-  0% {
-    color: rgb(241, 8, 8);
-  }
-  30% {
-    color: rgb(41, 204, 0);
-  }
-  50% {
-    color: rgb(5, 42, 252);
-  }
-  100% {
-    color: rgb(217, 231, 13);
-  }
+h2 {
+  font-family: "Henny Penny", cursive;
+  font-size: 2em;
+  text-align: center;
+  color: white;
+  margin-bottom: 50px;
 }
 
-h3 {
+@keyframes colortitle {
+  0% {
+    color: rgb(245, 57, 0);
+  }
+  30% {
+    color: rgb(148, 47, 7);
+  }
+  50% {
+    color: rgb(134, 9, 9);
+  }
+  100% {
+    color: rgb(255, 72, 0);
+  }
+}
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background:rgb(29, 8, 78);
+}
+#hackedlist {
+  position: absolute;
+  left: 77.2vw;
+  top: 345vh;
+  height: 410px;
+  margin: 55px;
+  border: 5px solid rgb(241, 8, 8);
+  width: 14.5vw;
+  background-color: #dcdcdc;
+  text-align: center;
+  cursor: pointer;
+}
+#hackedlist:nth-child(even) {
+ margin-top: 50px;
+}
+#hackedlist img {
+  margin-left: -20px;
+}
+#hackedlist h3 {
   font-family: "Henny Penny", cursive;
   font-size: 1.5em;
-  color: rgb(255, 255, 255);
+  color: rgb(29, 8, 78);
+  margin-top: 50px;
+  margin-left: -30px;
 }
-h4 {
+#hackedlist h4 {
+  font-family: "Ubuntu", sans-serif;
+  font-size: 1em;
+  color: rgb(29, 8, 78);
+  margin-left: -20px;
+}
+
+#list .student h3 {
+  font-family: "Henny Penny", cursive;
+  font-size: 1.5em;
+  color: rgb(29, 8, 78);
+  margin-top: 50px;
+  text-align: center;
+  margin-left: 0;
+}
+#list .student h4 {
   font-family: "Ubuntu", sans-serif;
   font-size: 1.2em;
-  color: rgb(252, 252, 252);
+  color: rgb(29, 8, 78);
+  text-align: center;
+  margin-left: 0;
 }
-#popup img {
-  border-radius: 50%;
-  margin-top: 5vh;
-  margin-left: 10vw;
-  height: 50%;
-  width: 50%;
+
+#popup .profile {
+position: absolute;
+left: 25vw;
+top: 15vh;
+height: 30%;
+width: 30%;
+
+}
+
+#popup .crest {
+  height: 100px;
+  width: 100px;
+  position: absolute;
+  top: 28vh;
+  left: 24vw;
+  z-index: 1;
 }
 #popup h3 {
+  font-family: "Henny Penny", cursive;
   font-size: 2em;
-  color: rgb(0, 0, 0);
-  text-align: center;
+  color: rgb(29, 8, 78);
+  margin-top: 50px;
+  margin-left: 100px;
 }
-#popup h4 {
+
+#popup h2, h5, h4 {
   font-size: 1.5em;
-  color: rgb(0, 0, 0);
-  text-align: center;
+  color: rgb(29, 8, 78);
+  margin-left: 100px;
 }
+
 .content:hover {
   cursor: pointer;
 }
 #popup {
   top: 10vh;
-  left: 30vw;
-  width: 40vw;
+  left: 25vw;
+  width: 50vw;
   height: 80vh;
   position: fixed;
-  background-color: hsl(0, 0%, 100%);
+  background-color: hsl(0, 12%, 94%);
   display: none;
+}
+
+#list .student:nth-child(even) {
+margin-top: 50px;
 }
 
 #close {
   position: fixed;
-  right: 30vw;
+  right: 25vw;
 }
 
+
 #close button {
-  background-color: #ff5100;
+  background-color: rgb(29, 8, 78);
   margin-top: 20px;
   border-radius: 50%;
   height: 65px;
@@ -109,21 +193,25 @@ h4 {
 }
 #list {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
   grid-gap: 2em;
   margin: 20px;
   margin-top: 10vh;
   text-align: center;
   list-style-type: none;
+  cursor: pointer;
+}
+#list .profile {
+margin-bottom: 50px;
 }
 
 .dropdown-content button {
   float: none;
-  color: black;
+  color: rgb(255, 255, 255);
   padding: 12px 16px;
   text-decoration: none;
   display: block;
-  text-align: left;
+  text-align: center;
 }
 
 /* Show the dropdown menu on hover */
@@ -135,14 +223,28 @@ button {
   cursor: pointer;
   font-size: 0.8em;
   font-family: "Ubuntu", sans-serif;
-  padding: 15px 10px;
-  background-color: #d3c9c9;
+  padding: 10px 10px;
+  color: white;
+  background-color: rgb(29, 8, 78);;
   margin: 10px;
   margin-top: -15px;
   height: 70px;
   width: 110px;
 }
 
+a {
+  position: absolute;
+  left: 5vw;
+  background-color: rgb(29, 8, 78);
+  color: white;
+  border-radius: 50%;
+  margin-top: -10px;
+  padding: 25px 20px;
+  font-size: 1em;
+  text-align: center;
+  cursor: pointer;
+  border: 1px solid white;
+}
 .dropdown {
   float: left;
 }
@@ -151,12 +253,10 @@ button {
   display: none;
   position: absolute;
   min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
 }
 
 .content img {
-  border-radius: 50%;
   width: 40%;
 }
 .buttonwrapper {
@@ -171,6 +271,81 @@ button {
   width: 200px;
 }
 .crest {
+  border-radius: 50%;
   max-width: 300px;
   margin-top: 30px;
+}
+@media only screen and (max-width: 1000px) {
+  #list {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+  }
+  #popup {
+    width: 80%;
+    height: 60%;
+    margin-left: -100px;
+  }
+
+  #popup .profile {
+  left: 45vw;
+  }
+  #popup .crest {
+    top: 23vh;
+    left: 40vw;
+    width: 80px;
+    height: 80px;
+  }
+  #close {
+    left: 75vw;
+  }
+}
+@media only screen and (max-width: 850px) {
+  #list {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+}
+
+@media only screen and (max-width: 650px) {
+  #list {
+    grid-template-columns: 1fr;
+  }
+
+  #popup {
+    width: 100%;
+    height: 60%;
+    margin-left: -140px;
+  }
+  #close {
+    left: 80vw;
+  }
+  
+#popup .profile {
+  left: 55vw;
+  top: 20vh;
+}
+#popup .crest {
+  left: 50vw;
+  width: 80px;
+  height: 80px;
+}
+h1 {
+  font-size: 1.5em;
+  margin-left: -50px;
+  width: 100%;
+}
+h2 {
+  font-size: 1em;
+}
+a {
+  width: 40px;
+  height: 30px;
+  margin-top: -100px;
+}
+nav {
+  margin-left: 50px;
+}
+button  {
+  font-size: 0.8em;
+  width: 120px;
+  margin: 5px;
+}
 }
